<resources>
    <string name="app_name">DeliveryRobot</string>
    <string name="num_keyboard_1">1</string>
    <string name="num_keyboard_2">2</string>
    <string name="num_keyboard_3">3</string>
    <string name="num_keyboard_4">4</string>
    <string name="num_keyboard_5">5</string>
    <string name="num_keyboard_6">6</string>
    <string name="num_keyboard_7">7</string>
    <string name="num_keyboard_8">8</string>
    <string name="num_keyboard_9">9</string>
    <string name="num_keyboard_0">0</string>
</resources>